src/objects/KPIMGR_User_Target__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_Performance__c</fullName>
        <label>Actual Performance</label>
        <summarizedField>KPIMGR_Actuals__c.Value__c</summarizedField>
        <summaryForeignKey>KPIMGR_Actuals__c.KPIMGR_Target__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Object__c</fullName>
        <label>Record Count Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Business Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>KPI End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KPIMGR_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Master_Employee_KPI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Employee KPI</label>
        <referenceTo>KPIMGR_User_Target__c</referenceTo>
        <relationshipLabel>Employee KPIs</relationshipLabel>
        <relationshipName>Increment_Employee_KPIs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Master__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Master</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Increments__c</fullName>
        <label>No. of Increments</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Object_1__c</fullName>
        <label>Primary Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_2_Child_Of__c</fullName>
        <label>Object 2 Child Of</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_2_Lookup__c</fullName>
        <label>Object 2 Lookup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_2_Relationship__c</fullName>
        <label>Object 2 Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_2__c</fullName>
        <label>Object 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_3_Child_Of__c</fullName>
        <label>Object 3 Child Of</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_3_Lookup__c</fullName>
        <label>Object 3 Lookup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_3_Relationship__c</fullName>
        <label>Object 3 Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_3__c</fullName>
        <label>Object 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_4_Child_Of__c</fullName>
        <label>Object 4 Child Of</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_4_Lookup__c</fullName>
        <label>Object 4 Lookup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_4_Relationship__c</fullName>
        <label>Object 4 Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>KPI Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sum_Field__c</fullName>
        <label>Sum Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Name__c</fullName>
        <label>KPI Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <label>KPI Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trigger_On__c</fullName>
        <label>Trigger On</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>KPI Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Record Count</fullName>
                </value>
                <value>
                    <fullName>Sum Field</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Field_Object__c</fullName>
        <label>User Field Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Field__c</fullName>
        <label>User Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Employee KPI</label>
    <nameField>
        <displayFormat>EKPI-{00000}</displayFormat>
        <label>Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee KPIs</pluralLabel>
    <recordTypes>
        <fullName>Increment_Employee_KPI</fullName>
        <active>true</active>
        <description>Record type for the increments of an employee KPI</description>
        <label>Increment Employee KPI</label>
    </recordTypes>
    <recordTypes>
        <fullName>Master_Employee_KPI</fullName>
        <active>true</active>
        <description>Record type for the master record against a range of employee KPIs</description>
        <label>Master Employee KPI</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>